src/compiletest/lcell-01.stderr
error[E0599]: no method named `clone` found for struct `qcell::LCellOwner<'_>` in the current scope
   --> $DIR/lcell-01.rs:8:29
    |
8   |         let owner2 = owner1.clone(); // Compile fail
    |                             ^^^^^ method not found in `qcell::LCellOwner<'_>`
    |
   ::: $RUST/src/libcore/clone.rs:122:8
    |
122 |     fn clone(&self) -> Self;
    |        -----
    |        |
    |        the method is available for `std::sync::Arc<qcell::LCellOwner<'_>>` here
    |        the method is available for `std::rc::Rc<qcell::LCellOwner<'_>>` here
